--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.0",
     "pg": "^8.11.0",
+    "react-remita-inline": "^1.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.16"
