--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@nestjs/typeorm": "^10.0.0",
     "@nestjsx/crud": "^5.0.0-alpha.3",
     "@nestjsx/crud-typeorm": "^5.0.0-alpha.3",
+    "@paystack/paystack-sdk": "^1.0.1",
     "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.0",
+    "lodash": "^4.17.21",
     "pg": "^8.11.0",
     "react-remita-inline": "^1.1.0",
     "reflect-metadata": "^0.1.13",
